content/terraform-enterprise/1.2.x/docs/enterprise/application-administration/integration.mdx
---
page_title: Integrate with external services 
description: >-
    Integrate with external services to send communications and authenticate users. Learn how to configure cost estimation, and SAML, SMTP, and Twilio integrations.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-02-04T15:01:51-08:00
# END AUTO GENERATED METADATA
---

# Integrate with External Services 

This topic describes how to integrate Terraform Enterprise with external services so that Terraform Enterprise can send communications and authenticate users. Refer to the [Admin Settings API](/terraform/enterprise/api-docs/admin/settings) for instructions on configuring integrations using the API.

## Introduction

You can integrate with the following external services: 

* Cost Estimation
* SAML Single Sign-On
* SMTP
* Twilio

## Cost Estimation Integration

Cost Estimation integration allows Terraform Enterprise to estimate costs for resources during a run. Refer to the [usage instructions](/terraform/enterprise/cost-estimation).

To access the Cost Estimation settings, click **Cost Estimation**. To enable Cost Estimation, check the **Enable Cost Estimation** box on the settings page, configure the settings, and click "Save settings." At least one provider needs to be configured in order to save.

* **AWS Instance Profile**: If checked this option will be used without need to input the Access Key or Secret Key in the above form (fields will be greyed out).
* **AWS Access Key ID**: The AWS Access Key ID for a given IAM user. The role associated to these credentials must have full access to the "Price List" service and all of that service's resources. Cost Estimation makes API calls in the `us-east-1` region.
* **AWS Secret Key**: The AWS Secret Key pair for the same Access Key ID.
* **GCP Credentials**: The contents of the JSON that is downloaded when you create a GCP Service Account.
* **Azure Client ID**: The Azure Client ID for a given Service Account. The role associated to these credentials must have full access to the `RateCard` service and all of that service's resources.
* **Azure Client Secret**: The Azure Client Secret pair for the same Client ID.
* **Azure Subscription ID**: The Azure Subscription ID for your account.
* **Azure Tenant ID**: The Azure Subscription ID for your account.

## SAML Integration

The SAML integration settings allow configuration of a SAML Single Sign-On integration for Terraform Enterprise. To access the SAML settings, click **SAML**.

-> **Note:** Since enabling SAML is an involved process, there is a [separate SAML section of the documentation](/terraform/enterprise/saml/configuration). Consult those pages for detailed requirements and configuration instructions for both Terraform Enterprise and your IdP.

To enable SAML, click **Enable SAML single sign-on** under "SAML Settings". Configure the fields below, then click **Save SAML settings**. To update the settings, update the field values, and save.

The **Enable SAML debugging** option can be used if sign-on is failing. It provides additional debugging information during login tests. It should not be left on during normal operations.

## SMTP Integration

SMTP integration allows Terraform Enterprise to send email-based notifications, such as new user invitations, password resets, and system errors. We strongly recommend configuring SMTP.

To access the SMTP settings, click **SMTP**. To enable SMTP, check the **Enable email sending with SMTP** box on the settings page, configure the settings, and click "Save SMTP settings."

* **Sender Email**: The address that system mails should come from. A plain email address; do not include a display name.
* **Send test email to**: A sample address to send a test email to. Used to validate the settings when configuring SMTP; not stored.
* **Host** and **Port**: The host and port details for the SMTP server that will be used.
* **Authentication**: The type of authentication used by the server. Options are `none`, `login`, `plain`, and `xoauth2`.
* **Username**: Username used to authenticate to the server. Not required if the authentication setting is `none`.
* **Password**: Password to authenticate to the server. Not required if the authentication setting is `none`.

### Microsoft Exchange with XOAuth 2.0

Terraform Enterprise supports Microsoft Exchange using the OAuth 2.0 client credentials
flow. Refer to the [Microsoft documentation](https://learn.microsoft.com/en-us/exchange/client-developer/legacy-protocols/how-to-authenticate-an-imap-pop-smtp-application-by-using-oauth#use-client-credentials-grant-flow-to-authenticate-smtp-imap-and-pop-connections) for instructions.

<Note>

Refer to [Microsoft's documentation](https://learn.microsoft.com/en-us/exchange/client-developer/legacy-protocols/how-to-authenticate-an-imap-pop-smtp-application-by-using-oauth) for instructions on registering the application in Microsoft Entra and configuring the necessary mailbox settings.

</Note>

To enable OAuth 2.0 authentication, select **xoauth2** from the **Authentication** dropdown menu and
configure the following fields:

- **Sender Email**: The address that system emails come from. The application created in Microsoft Entra must have access to this mailbox. Refer to [Microsoft's documentation](https://learn.microsoft.com/en-us/exchange/client-developer/legacy-protocols/how-to-authenticate-an-imap-pop-smtp-application-by-using-oauth#register-service-principals-in-exchange) for instructions on registering a service principal and assigning it to a specific mailbox.
- **Send test email to**: A sample address to send a test email to. Used to validate the settings when configuring SMTP. Terraform Enterprise does not store this address.
- **Host** : Microsoft Exchange SMTP server host. Set to `smtp.office365.com`. 
- **Port**: Microsoft Exchange SMTP server port. Set to `587`.
- **Client ID**: The application ID that authenticates with the SMTP server. Register the Terraform Enterprise application in Microsoft Entra and enter the generated Client ID. Refer to [Microsoft's documentation](https://learn.microsoft.com/en-us/exchange/client-developer/legacy-protocols/how-to-authenticate-an-imap-pop-smtp-application-by-using-oauth) for registration instructions.
- **Client Secret**: Generate a client secret in Microsoft Entra and enter it in this field.
- **Tenant ID**: The tenant ID that hosts the registered application.

-> **Note**: The SMTP server used with Terraform Enterprise must support connection via SSL with a valid certificate and `STARTTLS` secure communication; `SMTPS` is not supported in Terraform Enterprise.

## Twilio Integration

Twilio integration is used to send SMS messages for two-factor authentication. It is optional; application-based 2FA is also supported.

To access the Twilio settings, click **Twilio**. To enable Twilio, check the **Enable SMS sending with Twilio** box on the settings page and configure the relevant settings:

* **Account SID**: The unique identifier for your Twilio [application](https://www.twilio.com/docs/usage/api/applications).
* **Auth Token**: The token that allows [authentication](https://support.twilio.com/hc/en-us/articles/223136027-Auth-Tokens-and-How-to-Change-Them) with your Account SID.
* **From Number**: The number the message should come from. Must be registered with Twilio.

You can also verify the Twilio settings by sending a test message. Enter a number in the **From Number** field and click **Send Test SMS**.
